Fix EmojiSelector position on mobile

--- a/app/styles/gabsocial/components.scss
+++ b/app/styles/gabsocial/components.scss
@@ -2713,7 +2713,6 @@ a.status-card.compact:hover {
 .detailed-status__button {
   flex: 1 1 auto;
   text-align: center;
-  position: relative;
 }
 
 .column-settings__outer {
